tests/adhoc/nullness/enabled/positive.next.bsl

tests\adhoc\nullness\enabled\positive.fs(8,24): warning FS3271: The 'nullness checking' language feature is not enabled. This use of a nullness checking construct will be ignored.

tests\adhoc\nullness\enabled\positive.fs(51,15): warning FS3271: The 'nullness checking' language feature is not enabled. This use of a nullness checking construct will be ignored.

tests\adhoc\nullness\enabled\positive.fs(56,19): warning FS3271: The 'nullness checking' language feature is not enabled. This use of a nullness checking construct will be ignored.

tests\adhoc\nullness\enabled\positive.fs(63,19): warning FS3271: The 'nullness checking' language feature is not enabled. This use of a nullness checking construct will be ignored.

tests\adhoc\nullness\enabled\positive.fs(193,17): error FS0001: The type 'List<int>' does not have 'null' as a proper value

tests\adhoc\nullness\enabled\positive.fs(195,17): error FS0001: The type 'List<String>' does not have 'null' as a proper value
